# myshoppingmall

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
apps/community/: models.py  serializers.py  urls.py  utils.py  views.py
apps/community/migrations/: 0001_initial.py  0002_post_image.py
apps/product/: admin.py  models.py  serializers.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py  0002_initial.py
apps/users/: __init__.py  admin.py  apps.py  auth.py  error.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_userprofile_email.py  0003_address_created_at_address_updated_at_and_more.py
core/: models.py  urls.py
myshoppingmall/: asgi.py  urls.py  wsgi.py
myshoppingmall/settings/: base.py  dev.py
myshoppingmall/settings/utils/: database.py
