[tool.poetry]
name = "myshoppingmall"
version = "0.1.0"
description = ""
authors = ["kidsage <ruhyun92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Django
django = "^4.2.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-extensions = "^3.2.1"
django-debug-toolbar = "^3.8.1"
django-storages = "^1.13.1"
django-redis = "^5.2.0"
# Others
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
celery = "^5.2.7"
pyjwt = { extras = ["crypto"], version = "^2.6.0" }
loguru = "^0.6.0"
devtools = { extras = ["pygments"], version = "^0.10.0" }
drf-spectacular = "^0.26.0"
django-admin-rangefilter = "^0.10.0"
django-phonenumber-field = "^7.1.0"
phonenumbers = "^8.13.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.11.4"
bandit = "^1.7.4"
pre-commit = "^3.0.3"

[tool.poetry.group.test.dependencies]
pytest-django = "^4.5.2"
pytest-cov = "^4.0.0"
freezegun = "^1.2.2"
faker = "^16.6.1"
factory-boy = "^3.2.1"
parameterized = "^0.8.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
(
  .git
  | .mypy_cache
  | __pycache__
  | migrations
)
'''

[tool.isort]
extend_skip = ["migrations"]
profile = "black"
known_first_party = ["apps", "settings", "third_party"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
